chassis/tests/failing/comp_type_item.stderr
error: custom attribute panicked
 --> $DIR/comp_type_item.rs:5:1
  |
5 | #[integration]
  | ^^^^^^^^^^^^^^
  |
  = help: message: Associated type not allowed in component DummyFactory
